# cargo-deb

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  systemd.md
.github/workflows/: cargo.yml  release.yml
example/: Cargo.toml  build.rs
example/debian/: postinst  service
src/: assets.rs  compress.rs  config.rs  control.rs  data.rs  debarchive.rs  debuginfo.rs  dependencies.rs  dh_installsystemd.rs  dh_lib.rs  error.rs  lib.rs  listener.rs  main.rs  manifest.rs  ok_or.rs  pathbytes.rs  tararchive.rs  util.rs
src/deb/: ar.rs  archive.rs  control.rs  data.rs  tar.rs
src/dh/: dh_installsystemd.rs  dh_lib.rs
src/parse/: cargo.rs  config.rs  manifest.rs
src/util/: compress.rs  pathbytes.rs
test-resources/testroot/testchild/: Cargo.toml
tests/: command.rs  common.rs  serde_tests.rs
tests/dir-confusion/: Cargo.toml  README.md
tests/dir-confusion/sub-crate/: Cargo.toml
tests/package-deb-gen/: .gitignore  Cargo.toml
tests/test-workspace/: Cargo.toml
tests/test-workspace/test-ws1/: Cargo.toml
tests/test-workspace/test-ws2/: Cargo.toml  a-read-me
tests/test-workspace/test-ws3/: Cargo.toml
tests/ws-metadata/: Cargo.toml
tests/ws-metadata/c1/: Cargo.toml
tests/ws-metadata/c2/: Cargo.toml
tests/ws-metadata/c2/src/: lib.rs
