[package]
name = "cargo-deb"
license = "MIT"
authors = ["Kornel Lesiński <kornel@geekhood.net>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
description = "Make Debian packages (.deb) easily with a Cargo subcommand"
documentation = "https://docs.rs/cargo-deb"
homepage = "https://lib.rs/crates/cargo-deb"
keywords = ["debian", "ubuntu", "deploy", "cargo-subcommand"]
repository = "https://github.com/kornelski/cargo-deb"
readme = "README.md"
version = "2.0.0"
edition = "2021"
rust-version = "1.63"

[package.metadata.deb]
maintainer = "Kornel Lesiński <kornel@geekhood.net>"
copyright = "2016-2023, Michael Aaron Murphy, Kornel Lesiński"
license-file = ["LICENSE", "5"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cargo-deb", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]

[lib]
name = "cargo_deb"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-deb"
path = "src/main.rs"
doc = false

[dependencies]
flate2 = "1.0.27"
getopts = "0.2.21"
md5 = "0.7.0"
quick-error = "2.0.1"
xz2 = { version = "0.1.7", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tar = "0.4.40"
toml = "0.8"
glob = "0.3.1"
ar = "0.9.0"
cargo_toml = "0.16"
rayon = "1.7.0"
regex = { version = "1.9.5", default-features = false, features = ["std"] }
itertools = "0.11.0"
num_cpus = { version = "1.16.0", optional = true }
tempfile = "3.8.0"
env_logger = "0.10.0"
log = "0.4.20"
crossbeam-channel = "0.5.8"

[features]
default = ["lzma"]
lzma = ["dep:xz2", "dep:num_cpus"]
static-lzma = ["lzma", "xz2?/static"]

[profile.dev]
debug = 1

[profile.release]
lto = true
opt-level = 3
debug = false

[dev-dependencies]
mockall = "0.11.4"
rstest = { version = "0.18.2", default-features = false }
lazy_static = "1.4.0"

[workspace]
exclude = ["example"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "actively-developed" }
