[package]
name = "cargo-deb"
license = "MIT"
authors = ["Kornel Lesiński <kornel@geekhood.net>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
description = "Make Debian packages (.deb) easily with a Cargo subcommand"
documentation = "https://docs.rs/cargo-deb"
homepage = "https://lib.rs/crates/cargo-deb"
keywords = ["debian", "ubuntu", "deploy", "cargo-subcommand"]
repository = "https://github.com/kornelski/cargo-deb"
readme = "README.md"
version = "2.10.0"
edition = "2021"
rust-version = "1.71"

[package.metadata.deb]
maintainer = "Kornel Lesiński <kornel@geekhood.net>"
copyright = "2016-2023, Michael Aaron Murphy, Kornel Lesiński"
license-file = ["LICENSE", "5"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    # both syntaxes work
    { source = "target/release/cargo-deb", dest = "usr/bin/", mode = "755" },
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]

[lib]
name = "cargo_deb"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-deb"
path = "src/main.rs"
doc = false

[dependencies]
clap = "4.4.18"
elf = { version = "0.7.4", default-features = false, features = ["std"], optional = true }
flate2 = "1.0.31"
zopfli = { version = "0.8", default-features = false, features = ["std", "gzip"] }
itertools = "0.14"
quick-error = "2.0.1"
xz2 = { version = "0.1.7", optional = true }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tar = { version = "0.4.41", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"] }
glob = "0.3.1"
ar = "0.9.0"
cargo_toml = "0.21"
rayon = "1.10.0"
regex = { version = "1.10.6", default-features = false, features = ["std"] }
tempfile = "3.12.0"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "regex"] }
log = "0.4.22"

[features]
default = ["lzma", "debug-id"]
# Compress with a built-in LZMA library
lzma = ["dep:xz2"]
# Read GNU Debug Id when exporting separate debug symbols
debug-id = ["dep:elf"]
# Compile it instead of trying to use system solib
static-lzma = ["lzma", "xz2?/static"]

[profile.dev]
debug = 1

[profile.dev.package]
xz2 = { opt-level = 2 }
zopfli = { opt-level = 2 }
miniz_oxide = { opt-level = 2 }

[profile.release]
lto = true
opt-level = 3
debug = false

[dev-dependencies]
mockall = "0.13.0"
rstest = { version = "0.24", default-features = false }
lazy_static = "1.5.0"

[workspace]
resolver = "2"
exclude = ["example", "tests/*", "test-resources"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "actively-developed" }
