[package]
name = "cargo-deb"
license = "MIT"
authors = ["Kornel Lesiński <kornel@geekhood.net>", "Ximon Eighteen (https://github.com/ximon18)"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
description = "Make Debian packages (.deb) easily with a Cargo subcommand"
documentation = "https://docs.rs/cargo-deb"
homepage = "https://lib.rs/crates/cargo-deb"
keywords = ["debian", "ubuntu", "deploy", "cargo-subcommand"]
repository = "https://github.com/kornelski/cargo-deb"
readme = "README.md"
version = "3.6.0"
edition = "2021"
rust-version = "1.76"

[package.metadata.deb]
maintainer = "Kornel Lesiński <kornel@geekhood.net>"
copyright = "2016-2023, Michael Aaron Murphy, Kornel Lesiński"
license-file = ["LICENSE", "5"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    # both syntaxes work
    { source = "target/release/cargo-deb", dest = "usr/bin/", mode = "755" },
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
profile = "dist"

[lib]
name = "cargo_deb"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-deb"
path = "src/main.rs"
doc = false

[dependencies]
clap = "4.5.41"
elf = { version = "0.7.4", default-features = false, features = ["std"], optional = true }
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"], optional = true }
zopfli = { version = "0.8", default-features = false, features = ["std", "gzip"] }
itertools = "0.14"
quick-error = "2.0.1"
xz2 = { version = "0.1.7", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tar = { version = "0.4.44", default-features = false }
toml = { version = "0.9", default-features = false, features = ["parse", "display"] }
glob = "0.3.2"
ar = "0.9.0"
cargo_toml = "0.22"
rayon = "1.10.0"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
tempfile = "3.20.0"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "regex"] }
log = "0.4.27"
anstream = { version = "0.6.19", default-features = false, features = ["auto"] }
anstyle = { version = "1.0.11", default-features = false, features = ["std"] }

[features]
default = ["lzma", "debug-id"]
# Compress with a built-in LZMA library
lzma = ["dep:xz2"]
# Compress with a built-in gzip library (not used if `lzma` is available)
gzip = ["dep:flate2"]
# Read GNU Debug Id when exporting separate debug symbols
debug-id = ["dep:elf"]
# Compile it instead of trying to use system solib
static-lzma = ["lzma", "xz2?/static"]

# ## Control default options

# Assume `--dbgsym` by default (change with `--no-dbgsym`)
default_enable_dbgsym = []
# Assume `--separate-debug-symbols` by default (change with `--no-separate-debug-symbols`)
default_enable_separate_debug_symbols = []
# Assume `--compress-debug-symbols` by default (change with `--no-compress-debug-symbols`)
default_enable_compress_debug_symbols = []

[profile.dev]
debug = 1

[profile.dev.package]
xz2 = { opt-level = 2 }
lzma-sys = { opt-level = 2 }
zopfli = { opt-level = 2 }
zlib-rs = { opt-level = 2 }

[profile.release.package]
adler2 = { opt-level = 2 }
crc32fast = { opt-level = 2 }
crossbeam-utils = { opt-level = 2 }
lzma-sys = { opt-level = 2 }
memchr = { opt-level = 2 }
rayon-core = { opt-level = 2 }
serde_json = { opt-level = 2 }
xz2 = { opt-level = 2 }
zlib-rs = { opt-level = 2 }
zopfli = { opt-level = 2 }

[profile.release]
# quicker build for one-off cargo install
opt-level = 1
debug = false

[profile.dist]
inherits = "release"
lto = true
opt-level = "s"

[dev-dependencies]
mockall = "0.13.1"
rstest = { version = "0.26", default-features = false }
lazy_static = "1.5.0"

[workspace]
resolver = "2"
exclude = ["example", "tests/*", "test-resources"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "actively-developed" }
