[package]
name = "example"
description = "just an example"
version = "0.1.0"
build = "build.rs"
license = "MIT"
publish = false

[dependencies]

[package.metadata.deb]
maintainer = "cargo-deb developers <cargo-deb@example.invalid>"
copyright = "2017, cargo-deb developers."
license-file = ["LICENSE", "2"]
extended-description = "example project for cargo-deb"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/example", "usr/bin/", "755"],
    # assets
    ["assets/*", "var/lib/example", "644"],
    ["target/release/assets/*", "var/lib/example", "644"],
    ["3.txt", "var/lib/example/3.txt", "644"],
    ["3.txt", "var/lib/example/merged.txt", "644"],
]
changelog = "changelog"
default-features = false
features = ["example_debian_build"]

[package.metadata.deb.variants.auto_assets]
assets =  [
    # binary
    "$auto",
    # assets
    ["assets/*", "var/lib/example", "644"],
    ["target/release/assets/*", "var/lib/example", "644"],
    ["4.txt", "var/lib/example/4.txt", "644"],
]

[package.metadata.deb.variants.mergeappend]
merge-assets.append = [
    { source = "4.txt", dest = "var/lib/example/appended/4.txt", mode = "644" }
]

[package.metadata.deb.variants.mergedest]
merge-assets.by.dest = [
    ["4.txt", "var/lib/example/merged.txt", "644"]
]

[package.metadata.deb.variants.mergesrc]
merge-assets.by.src = [
    ["3.txt", "var/lib/example/merged-2.txt", "644"]
]

[package.metadata.deb.variants.mergeappendandsrc]
merge-assets.append = [
    ["4.txt", "var/lib/example/appended/4.txt", "644"]
]
merge-assets.by.src = [
    ["3.txt", "var/lib/example/merged-2.txt", "644"]
]

[profile.release]
# You must enable debug symbols explicitly if you want them in the package
debug = true

[features]
default = ["example_non_debian_build"]
example_non_debian_build = []
example_debian_build = []
